# adbPullAs

./: README.md  UpcomingReleaseNotes.md  adbPullAs.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  run_test.sh  run_test_without_pull_as_wrapper.sh  test.yml
TestApplication/app/: build.gradle
TestApplication/app/src/main/: AndroidManifest.xml
TestApplication/app/src/main/java/com/viliussutkus89/adb/pull/as/: MainActivity.kt
TestApplication/app/src/main/res/layout/: activity_main.xml
TestApplication/app/src/main/res/values/: strings.xml
TestApplication/gradle/wrapper/: gradle-wrapper.properties
ci-scripts/: getVersion  incrementVersion  version.py
src/adbPullAs/: __init__.py
